--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,7 @@
 <header class="top-navbar">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="index.html">
+			<a class="navbar-brand" href="/">
 				<img src="images/logo.png" alt="" />
 			</a>
 			<button
@@ -25,8 +25,8 @@
 					<li class="nav-item <%= page_name === 'about' && 'active' %>">
 						<a class="nav-link" href="/about">About Us</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="courses.html">Courses</a>
+					<li class="nav-item <%= page_name === 'courses' && 'active' %>">
+						<a class="nav-link" href="/courses">Courses</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="dashboard.html">Dashboard</a>
