--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -38,7 +38,7 @@
 									<div class="course-br">
 										<div class="course-title">
 											<h2>
-												<a href="course-single.html" title=""
+												<a href="/courses/<%= course.slug %>" title=""
 													><%= course.name %></a
 												>
 											</h2>
