--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -83,12 +83,13 @@
 						<div class="widget-categories">
 							<h3 class="widget-title">Categories</h3>
 							<ul>
-								<li><a href="#">Political Science</a></li>
-								<li><a href="#">Business Leaders Guide</a></li>
-								<li><a href="#">Become a Product Manage</a></li>
-								<li><a href="#">Language Education</a></li>
-								<li><a href="#">Micro Biology</a></li>
-								<li><a href="#">Social Media Management</a></li>
+								<% for(let category of categories) {%>
+								<li>
+									<a href="/courses?categories=<%= category.slug %>"
+										><%= category.name %></a
+									>
+								</li>
+								<% } %>
 							</ul>
 						</div>
 					</div>
