--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -37,12 +37,24 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li>
-						<a class="hover-btn-new log orange mr-2" href="login.html"
+						<a class="hover-btn-new log mr-2" href="login.html"
 							><span><i class="fa fa-sign-in" aria-hidden="true"></i></span
 						></a>
 					</li>
 					<li>
-						<a class="hover-btn-new log orange" href="register.html"
+						<a
+							class="
+								hover-btn-new
+								log
+								<%=
+								page_name
+								===
+								'register'
+								&&
+								'orange'
+								%>
+							"
+							href="/register"
 							><span><i class="fa fa-user-plus" aria-hidden="true"></i></span
 						></a>
 					</li>
