--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -37,7 +37,20 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li>
-						<a class="hover-btn-new log mr-2" href="login.html"
+						<a
+							class="
+								hover-btn-new
+								log
+								mr-2
+								<%=
+								page_name
+								===
+								'register'
+								&&
+								'orange'
+								%>
+							"
+							href="/login"
 							><span><i class="fa fa-sign-in" aria-hidden="true"></i></span
 						></a>
 					</li>
