--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
 					<div class="col-xl-12 col-md-12 col-sm-12">
 						<div class="contact_form">
 							<div id="message"></div>
-							<form name="contactform" method="post">
+							<form name="contactform" method="POST" action="/users/login">
 								<div class="row row-fluid">
 									<div class="offset-1 col-lg-10 col-md-10 col-sm-10">
 										<input
