--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -28,14 +28,17 @@
 					<li class="nav-item <%= page_name === 'courses' && 'active' %>">
 						<a class="nav-link" href="/courses">Courses</a>
 					</li>
+					<% if(userIN) {%>
 					<li class="nav-item">
 						<a class="nav-link" href="dashboard.html">Dashboard</a>
 					</li>
+					<% } %>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
+					<% if(!userIN) { %>
 					<li>
 						<a
 							class="
@@ -71,6 +74,26 @@
 							><span><i class="fa fa-user-plus" aria-hidden="true"></i></span
 						></a>
 					</li>
+					<% } %> <% if(userIN) { %>
+					<li>
+						<a
+							class="
+								hover-btn-new
+								log
+								mr-2
+								<%=
+								page_name
+								===
+								'login'
+								&&
+								'orange'
+								%>
+							"
+							href="/users/logout"
+							><span><i class="fa fa-sign-out" aria-hidden="true"></i></span
+						></a>
+					</li>
+					<% } %>
 				</ul>
 			</div>
 		</div>
